# Prism

./: .gitignore  BACKEND_GUIDE.md  DOCKER_README.md  README.md  SETUP_QA.md  docker-compose.dev.yml  docker-compose.yml  docker-dev.bat  docker-start.bat  docker-start.sh  docker-stop.bat  pdf_reader.py  start_full_dev.bat  test.txt
.github/: copilot-instructions.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  run_server.py
backend/app/: main.py
backend/app/services/: llm_service.py  qa_service.py
backend/ingestion/: chunker.py  ocr_image.py  parse_pdf.py
docs/: architecture.md  runbook.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  start_dev.bat  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ApiTester.jsx  DocumentQA.jsx  FileUpload.jsx  HardwareToggle.jsx  Header.jsx  ResultsDisplay.jsx  SearchHistory.jsx  SearchInterface.jsx  Sidebar.jsx
frontend/src/services/: api.js  apiExamples.js
models/: README.md
tests/integration/: test_integration.py
tests/unit/: test_sample.py
tools/: debug_viewer.py  export_citation.py
workers/: ingest_worker.py  transcribe_worker.py
